<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/welcome_bg_image"
        android:scaleType="centerCrop"
        android:src="@drawable/bg" />

    <TextView
        android:id="@+id/titleView"
        android:layout_width="155dp"
        android:layout_height="49dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/lobster"
        android:text="@string/hamirlir"
        android:textColor="@color/gray_2"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.824"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/msgView"
        android:layout_width="244dp"
        android:layout_height="35dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/lobster"
        android:text="@string/ushqehu_per_tu_kthyer_perseri"
        android:textColor="@color/gray_2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleView" />

    <Button
        android:id="@+id/btnLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/btn_bg_design"
        android:fontFamily="@font/lobster"
        android:onClick="register"
        android:text="@string/regjistrohu"
        android:textAllCaps="false"
        android:textColor="#252222"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/msgView"
        app:layout_constraintVertical_bias="0.646" />

    <TextView
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:fontFamily="@font/lobster"
        android:gravity="center"
        android:onClick="login"
        android:text="@string/logohu"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLog"
        app:layout_constraintVertical_bias="0.372" />


</androidx.constraintlayout.widget.ConstraintLayout>