<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:foreground="@drawable/foreground_design"
        android:id="@+id/RegImgBgView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg"
        android:contentDescription="@string/welcome_bg_image" />


    <TextView
        android:id="@+id/titleView"
        android:layout_width="155dp"
        android:layout_height="49dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/lobster"
        android:text="@string/hamirlir"
        android:textColor="@color/gray_3"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.824"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/msgView"
        android:layout_width="258dp"
        android:layout_height="33dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/lobster"
        android:text="@string/ushqehu_per_tu_kthyer_perseri"
        android:textColor="@color/gray_3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.863"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleView" />

    <EditText

        android:id="@+id/nameEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/ic_baseline_account_circle_24"
        android:drawablePadding="13dp"
        android:fontFamily="@font/lobster"
        android:hint="@string/perdoruesi"
        android:paddingStart="20dp"
        android:inputType="text"
        android:textColor="@color/gray_3"
        android:textColorHint="@color/gray_3"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/passEdt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454" />


    <EditText
        android:id="@+id/passEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="13dp"
        android:fontFamily="@font/lobster"
        android:hint="@string/fjalekalimi"
        android:paddingStart="20dp"
        android:inputType="textPassword"
        android:textColor="@color/gray_3"
        android:textColorHint="@color/gray_3"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnLog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />

    <Button
        android:id="@+id/btnLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/btn_bg_design"
        android:fontFamily="@font/lobster"
        android:text="@string/logohu"
        android:textAllCaps="false"
        android:textColor="@color/gray_3"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.753" />

    <TextView
        android:layout_width="337dp"
        android:layout_height="80dp"
        android:cursorVisible="true"
        android:fontFamily="@font/lobster"
        android:gravity="center"
        android:onClick="register"
        android:text="@string/nuk_keni_account_kliko_per_tu_rregjistruar"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/gray_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLog"
        app:layout_constraintVertical_bias="0.372"
        />

</androidx.constraintlayout.widget.ConstraintLayout>